tests/integration/snapshots/integration__conformance__y_array_empty.json-format.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format"]
status: 0
success: true
stdin ---
[]
stdout ---
[]

stderr ---
