tests/integration/snapshots/integration__conformance__y_array_empty.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
args: []
status: 0
success: true
stdout ---
[]
stderr ---
