tests/integration/snapshots/integration__conformance__y_array_false.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
command: "jjp"
status: 0
success: true
stdout ---
[false]
stderr ---
