tests/integration/snapshots/integration__conformance__y_array_heterogeneous.json-format---uglify.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format", "--uglify"]
status: 0
success: true
stdin ---
[null, 1, "1", {}]
stdout ---
[null,1,"1",{}]

stderr ---
