tests/integration/snapshots/integration__conformance__y_array_heterogeneous.json.snap
---
source: tests/integration/conformance.rs
expression: "format_output_snapshot(case.text, &annotated)"
---
case --- 
[null, 1, "1", {}]
stdout --- 
[null, 1, "1", {

    }]
stderr --- 
<empty>
