tests/integration/snapshots/integration__conformance__y_array_null.json.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format"]
status: 0
success: true
stdin ---
[null]
stdout ---
[
  null
]

stderr ---
